@@ -2,7 +2,7 @@
 #	Kloxo, Hosting Control Panel
 #
 #	Copyright (C) 2000-2009	LxLabs
-#	Copyright (C) 2009-2011	LxCenter
+#	Copyright (C) 2009-2019	LxCenter
 #
 #	This program is free software: you can redistribute it and/or modify
 #	it under the terms of the GNU Affero General Public License as
@@ -123,9 +123,9 @@ else
 fi
 
 # Check if OS is RHEL/CENTOS/FEDORA.
-if [ ! -f /etc/redhat-release ] ; then
+if [ ! -f /etc/centos-release ] ; then
 	echo -en "Operating System supported  " $C_NO
-	echo -e "\a\nSorry, only RedHat EL and CentOS are supported by $APP_NAME at this time.\n\nAborting ...\n"
+	echo -e "\a\nSorry, only CentOS is supported by $APP_NAME at this time.\n\nAborting ...\n"
 	exit $E_NOSUPPORT
 else
 	echo -en "Operating System supported  " $C_OK
