@@ -1,7 +1,7 @@
     Kloxo, Hosting Control Panel
 
     Copyright (C) 2000-2009	LxLabs
-    Copyright (C) 2009-2014	LxCenter
+    Copyright (C) 2009-2019	LxCenter
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as
