@@ -1,11 +1,11 @@
 Ways to get support
 ###################
 
-main website:__________ http://www.lxcenter.org
-forum:_________________ http://community.lxcenter.org
-project:_______________ http://project.lxcenter.org
-wiki:__________________ http://wiki.lxcenter.org
-irc:___________________ irc://irc.lxcenter.org
+main website:__________ http://
+forum:_________________ http://
+project:_______________ http://
+wiki:__________________ http://
+irc:___________________ irc://
 
 Open developers mailing list hosted at google groups:
 To subscribe, send an e-mail to:
