@@ -1,38 +1,0 @@
-rm -rf /var/lib/rpm/__db.00*
-rpm --rebuilddb
-
-yum -y install ezmlm-toaster ucspi-tcp-toaster daemontools-toaster courier-imap-toaster courier-authlib-toaster maildrop-toaster
-
-if ! rpm -q maildrop-toaster ; then
-echo The upgrade seems to have broken yum. Running /script/fix-yum-install 
-/script/fix-yum-install
-fi
-
-yum -y install ezmlm-toaster ucspi-tcp-toaster daemontools-toaster courier-imap-toaster courier-authlib-toaster maildrop-toaster
-
-if ! rpm -q maildrop-toaster ; then
-echo The upgrade seems to have broken yum. running with --force.
-/script/fix-yum-install --force
-fi
-
-yum -y install ezmlm-toaster ucspi-tcp-toaster daemontools-toaster courier-imap-toaster courier-authlib-toaster maildrop-toaster
-
-if ! rpm -q maildrop-toaster ; then
-echo Sorry, The force didnt fix yum either. You will need to manually fix so that the yum -y install maildrop-toaster works.
-exit;
-fi
-
-
-if  rpm -q lighttpd  ; then 
- yum -y install lighttpd-fastcgi;
-fi
-
-sh /script/centos5-postpostupgrade
-/script/upcp
-
-
-cd /usr/local/lxlabs/kloxo/httpdocs/
-cp ../file/centos-5/httpd.conf /etc/httpd/conf/
-lphp.exe ../bin/fix/fixmmail.php
-
-
