@@ -1,37 +1,0 @@
-
-cd /usr/local/lxlabs/kloxo/httpdocs/
-if ! lphp.exe ../bin/checkkernelversion-centos5.php ; then 
-echo Please manually Upgrade the Kernel first ; 
-exit ; 
-fi
-
-rm -rf /var/cache/yum/*
-rm -f lxlabs.repo-centos-5
-wget download.lxlabs.com/download/update/lxlabs.repo-centos-5
-mv lxlabs.repo-centos-5 /etc/yum.repos.d/lxlabs.repo
-rm -f centos-release-5-1.0.el5.centos.1.i386.rpm
-wget download.lxlabs.com/download/centos-release-5-1.0.el5.centos.1.i386.rpm
-rpm -i --force --nodeps centos-release-5-1.0.el5.centos.1.i386.rpm
-cp /usr/local/lxlabs/kloxo/file/centos-5/CentOS-Base.repo /etc/yum.repos.d/
-rpm -e courier-imap
-rpm -e maildrop
-rpm -e daemontools
-rpm -e ezmlm-idx-std
-rpm -e --nodeps ucspi-tcp
-rpm -e sendmail-doc
-rpm -e sendmail-cf
-rpm -e kernel-utils 
-rpm -e --nodeps --justdb kernel
-rpm -e --nodeps --justdb dummy-centos-4
-rpm -e --nodeps --justdb python-elementtree
-rpm -ivh --nodeps http://mirror.centos.org/centos/5.1/os/i386/CentOS/kernel-2.6.18-53.el5.i686.rpm
-yum -y install yum rpm
-yum -y upgrade
-if ! [ -d /var/qmail/supervise/ ] ; then
-echo Yum upgrade failed. Please manually run yum -y upgrade and make sure that it completes.
-echo After that run /script/centos5-postupgrade
-exit
-fi
-
-sh /script/centos5-postupgrade
-echo "*********Upgrade complete. Please restart the system***********"
