@@ -1,1 +1,4 @@
-rpm -Uvh $1 http://mirror.centos.org/centos/5.1/os/i386/CentOS/yum-3.0.5-1.el5.centos.5.noarch.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-build-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-libs-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-python-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/yum-metadata-parser-1.0-8.fc6.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/beecrypt-4.1.2-10.1.1.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/elfutils-libelf-0.125-3.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/elfutils-0.125-3.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/popt-1.10.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/elfutils-libs-0.125-3.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/python-urlgrabber-3.1.0-2.noarch.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/m2crypto-0.16-6.el5.1.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/python-sqlite-1.1.7-1.2.1.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/patch-2.5.4-29.2.2.i386.rpm
+#
+# Todo: Remove this file
+#
+# rpm -Uvh $1 http://mirror.centos.org/centos/5.1/os/i386/CentOS/yum-3.0.5-1.el5.centos.5.noarch.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-build-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-libs-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/rpm-python-4.4.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/yum-metadata-parser-1.0-8.fc6.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/beecrypt-4.1.2-10.1.1.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/elfutils-libelf-0.125-3.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/elfutils-0.125-3.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/popt-1.10.2-47.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/elfutils-libs-0.125-3.el5.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/python-urlgrabber-3.1.0-2.noarch.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/m2crypto-0.16-6.el5.1.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/python-sqlite-1.1.7-1.2.1.i386.rpm http://mirror.centos.org/centos/5.1/os/i386/CentOS/patch-2.5.4-29.2.2.i386.rpm
